FIX: button fonts on Safari

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
 }
 
 * {
+  font-family: 'Raleway', sans-serif;
   box-sizing: border-box;
 }
 
